--- a/src/defaultStyles.css
+++ b/src/defaultStyles.css
@@ -4,6 +4,7 @@
     margin-right: auto;
     max-width: 80%;
     text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
@@ -16,9 +17,10 @@
 
 .info
 {
+    
     margin-left: auto;
     margin-right: auto;
-    
+    font-size: 20px;
     text-align: center;
 }
 
